# SAGE

./: .env.example  .gitignore  LICENSE  README.generated.md  README.md
apps/backend/: pyproject.toml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: a2c4c225b2d9_init_repositories_doc_runs_doc_.py  f97d64bed461_add_github_access_token_to_repositories.py
apps/backend/sage/: __main__.py  app.py
apps/backend/sage/api/: routes_auth.py  routes_docs.py  routes_health.py  routes_repos.py  routes_users.py  routes_webhooks.py
apps/backend/sage/core/: config.py  logging.py
apps/backend/sage/db/: base.py  models.py
apps/backend/sage/schemas/: repository.py
apps/backend/sage/services/: api_doc_generator.py  api_extractor.py  chunker.py  dependency_graph.py  doc_generator.py  embeddings.py  git_ops.py  github_auth.py  health.py  llm.py  mermaid_renderer.py  module_docs.py  pipeline.py  pr_bot.py  prompts.py  vector_store.py
apps/backend/sage/workers/: celery_app.py  tasks.py
docs/: API.generated.md  ARCHITECTURE.generated.md
docs/apps/backend/migrations/: env.py.md
docs/apps/backend/migrations/versions/: a2c4c225b2d9_init_repositories_doc_runs_doc_.py.md
docs/apps/backend/sage/: __main__.py.md  app.py.md
docs/apps/backend/sage/api/: routes_auth.py.md  routes_docs.py.md  routes_health.py.md  routes_repos.py.md  routes_users.py.md
docs/apps/backend/sage/core/: config.py.md  logging.py.md
docs/apps/backend/sage/db/: base.py.md  (+1 more)
infra/compose/: docker-compose.yml
scripts/: dev-down.ps1  dev-logs.ps1  dev-up.ps1  test_webhook.py
(+15 files in other folders)
