[project]
name = "sage"
version = "0.1.0"
description = "SAGE — Self-updating Autonomous Generator for Engineering-docs"
requires-python = ">=3.11"
authors = [{ name = "Lakshit" }]
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "structlog>=24.4",
  "asyncpg>=0.30",
  "redis>=5.2",
  "sqlalchemy>=2.0",
  "alembic>=1.14",
  "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sage*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]